вирішив питання з хбс

--- a/practice/index.html
+++ b/practice/index.html
@@ -31,11 +31,25 @@
       </div>
     </div>
    </div>
+   <!-- <div class="color-card">
+      <div
+      class="color-swatch"
+      data-hex="{{hex}}"
+      data-rgb="{{rgb}}"
+      style="background-color: {{hex}}"
+    ></div>
+    <div class="color-meta">
+      <p>HEX: {{hex}} </p>
+      <p>RGB: {{rgb}} </p>
+      </div>
+    </div> -->
 
 
-   <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
+
+
   <!-- <script src="./json-lesson.js"></script> -->
   <!-- <script type="module" src="./feedback.js"></script> -->
-  <script type="module" src="./colorpicker.js"></script>
+  <!-- <script type="module" src="./colorpicker.js"></script> -->
+
 </body>
 </html>
