--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,24 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Webpack basic</title>
+  
 </head>
 <body>
 
-  <div class="container">
+  <!-- <div class="container">
     <h1>ЦЕ наш html файл</h1>
-  </div>
+  </div> -->
+
+  <div class="pallete js-pallete">
+    <div class="color-card">
+      <div class="color-swatch" data-hex="#955014" data-rgb="149,80,20" style="background-color: #955014;"></div>
+      <div class="color-meta">
+        <p>HEX: #955014</p>
+        <p>RGB: 149,80,20</p>
+      </div>
+    </div>
+   </div>
+
   
   <!-- <script src="./build/my-bundle.js"></script> -->
 </body>
