--- a/src/index.html
+++ b/src/index.html
@@ -8,19 +8,10 @@
 </head>
 <body>
 
-  <!-- <div class="container">
-    <h1>ЦЕ наш html файл</h1>
-  </div> -->
+  <!-- <div class="pallete js-pallete">
+   </div> -->
 
-  <div class="pallete js-pallete">
-    <div class="color-card">
-      <div class="color-swatch" data-hex="#955014" data-rgb="149,80,20" style="background-color: #955014;"></div>
-      <div class="color-meta">
-        <p>HEX: #955014</p>
-        <p>RGB: 149,80,20</p>
-      </div>
-    </div>
-   </div>
+   <div class="country-set js-country-set"></div>
 
   
   <!-- <script src="./build/my-bundle.js"></script> -->
