--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,8 @@
 
    <div class="country-set js-country-set"></div>
 
+   <p class="alert js-alert">Операцію проведено успішно!</p>
+
   
   <!-- <script src="./build/my-bundle.js"></script> -->
 </body>
