--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,15 @@
 
    <div class="country-set js-country-set"></div>
 
-   <p class="alert js-alert">Операцію проведено успішно!</p>
+   <!-- <p class="alert js-alert">Операцію проведено успішно!</p> -->
+
+  <!-- <div class="timer">
+      <p class="clockface js-clockface"></p>
+    <div class="actions">
+      <button class="timer-btn" data-action-start>Старт</button>
+      <button class="timer-btn" data-action-stop>Стоп</button>
+   </div>
+  </div> -->
 
   
   <!-- <script src="./build/my-bundle.js"></script> -->
