--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   <!-- <div class="pallete js-pallete">
    </div> -->
 
-   <div class="country-set js-country-set"></div>
+   <!-- <div class="country-set js-country-set"></div> -->
 
    <!-- <p class="alert js-alert">Операцію проведено успішно!</p> -->
 
@@ -23,6 +23,22 @@
    </div>
   </div> -->
 
+<button class="js-race-btn">наступний заїзд</button>
+<hr />
+<p class="js-winner"></p>
+<p class="js-progress"></p>
+<hr />
+
+<table class="js-results-table">
+  <thead>
+    <tr>
+      <th>Заїзд</th>
+      <th>Переможець</th>
+      <th>Час</th>
+    </tr>
+  </thead>
+  <tbody></tbody>
+</table>
   
   <!-- <script src="./build/my-bundle.js"></script> -->
 </body>
