--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
    </div>
   </div> -->
 
-<button class="js-race-btn">наступний заїзд</button>
+<!-- <button class="js-race-btn">наступний заїзд</button>
 <hr />
 <p class="js-winner"></p>
 <p class="js-progress"></p>
@@ -38,7 +38,18 @@
     </tr>
   </thead>
   <tbody></tbody>
-</table>
+</table> -->
+
+
+<div class="js-card-container"></div>
+
+<form class="form-inline search-form js-search-form">
+  <div class="form-group">
+    <input type="text" class="form-control" name="query" >
+  </div>
+
+  <button type="submit" class="btn btn-primary">Search</button>
+</form>
   
   <!-- <script src="./build/my-bundle.js"></script> -->
 </body>
