--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,7 @@
   <button type="submit" class="btn btn-primary">Search</button>
 </form> -->
 
-<form class="form-inline search-form js-search-form">
+<!-- <form class="form-inline search-form js-search-form">
   <div class="form-group">
     <input type="text" class="form-control" name="query" placeholder="Що шукаємо?" autocomplete="off">
   </div>
@@ -65,8 +65,9 @@
 <ul class="articles js-articles-container"></ul>
 
 <div class="show-more-wrapper">
-  <button type="button" data-action="load-more">Показати ще</button>
-</div>
+  <button type="button" class="is-hidden" data-action="load-more">Показати ще</button>
+</div> -->
+
   
   <!-- <script src="./build/my-bundle.js"></script> -->
 </body>
